# getting-rusty

./: README.md
rusty-todos/: Cargo.toml  README.md  todos.json
rusty-todos/src/: file_io.rs  main.rs  menu_io.rs  models.rs  todo_ops.rs
