[package]
name = "rusty-todos"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clearscreen = "2.0.1"
console = "0.15.7"
rustyline = "13.0.0"
serde_json = "1.0.110"
serde = { version = "1.0.194", features = ["derive"] }